allowing different proposal distributions; fixed prng correlation; added prng doc

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,11 +1,13 @@
 
 DOCFILES = $(patsubst %.rst,%.html,$(wildcard *.rst))
+CONVERTER = $(shell which rst2html 2>/dev/null || which rst2html.py)
+
 
 all: $(DOCFILES) readme
 
 %.html: %.rst
-	rst2html $< > $@
+	$(CONVERTER) $< > $@
 
 readme.html: readme
-	rst2html $< > $@
+	$(CONVERTER) $< > $@
 
