added ref to antonaldo's publication

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -3,7 +3,10 @@ DOCFILES = $(patsubst %.rst,%.html,$(wildcard *.rst))
 CONVERTER = $(shell which rst2html 2>/dev/null || which rst2html.py)
 
 
-all: $(DOCFILES) readme
+all: $(DOCFILES)
+
+clean: 
+	rm $(DOCFILES)
 
 %.html: %.rst
 	$(CONVERTER) $< > $@
