added sf logo, added how-to-get; updated doc a little

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -8,7 +8,7 @@ all: $(DOCFILES)
 clean: 
 	rm $(DOCFILES)
 
-%.html: %.rst
+%.html: %.rst header.txt footer.txt
 	$(CONVERTER) $< > $@
 
 readme.html: readme
